# rentmap

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  taplo.toml
migrations/: 20250101000001_create_rent_tables.sql
src/: cli.rs  config.rs  error.rs  file.rs  geocoding.rs  lib.rs  main.rs  pretty.rs  scraper.rs  url.rs
src/apis/vision/: client.rs  error.rs  model.rs
src/cli/: error.rs  fetcher.rs  mod.rs
src/cli/commands/: error.rs  fetch.rs  geocoding.rs  item.rs  items.rs  list.rs  lists.rs  mod.rs  ocr.rs
src/config/: error.rs  geocoding.rs  google.rs  mod.rs  model.rs  ocr.rs
src/file/: error.rs  metadata.rs  mod.rs  ops.rs  url.rs  workspace.rs
src/html/: extensions.rs  layout.rs  macros.rs  mod.rs  text.rs
src/scraping/: dom.rs  error.rs  fetcher.rs  mod.rs  page.rs  spider.rs
src/sites/: mod.rs  site.rs
src/sites/rent591/: mod.rs  model.rs  pipelines.rs  url.rs
src/sites/rent591/scrape/: item.rs  list.rs  mod.rs
src/sites/rent591/scrapers/: item.rs  items.rs  list.rs  lists.rs  mod.rs
src/sites/rent591/view/: error.rs  item.rs  list.rs  mod.rs
src/web/: args.rs  backend.rs  dom.rs  error.rs  fetcher.rs  mod.rs  page.rs
src/web/backends/: backend.rs  error.rs  mod.rs  spider.rs  spider_chrome.rs
src/web/backends/spider_chrome/: args.rs  backend.rs  error.rs  mod.rs  utils.rs
src/workspace/: args.rs  error.rs  internal.rs  mod.rs
