[package]
edition = "2024"
name = "rentmap"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
colored = "3.0.0"
dirs = "6.0.0"
ego-tree = "0.10.0"
google-cloud-auth = "0.21.0"
google-cloud-gax = "0.23.0"
google-cloud-vision-v1 = "0.4.0"
sanitise-file-name = "1.0.0"
scraper = "0.23.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

# override spider sub-dependencies to ensure version compatibility
spider_chrome = "2.37.125"
spider_fingerprint = "2.37.119"

[dependencies.chrono]
features = ["serde"]
version = "0.4.41"

[dependencies.clap]
features = ["derive", "env"]
version = "4.5.41"

[dependencies.comfy-table]
features = ["custom_styling"]
version = "7.1.4"

[dependencies.google_maps]
default-features = false
features = ["geocoding", "reqwest", "reqwest-default-tls"]
version = "3.8.3"

[dependencies.miette]
features = ["fancy"]
version = "7.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.spider]
features = [
    "cache_chrome_hybrid_mem",
    "chrome",
    "chrome_intercept",
    "chrome_stealth",
    "serde",
]
version = "=2.37.129"

[dependencies.sqlx]
default-features = false
features = ["chrono", "derive", "json", "migrate", "runtime-tokio", "sqlite"]
version = "0.8.6"

[dependencies.tokio]
default-features = false
features = ["macros", "rt"]
version = "1.46.1"

[dependencies.toml]
default-features = false
features = ["parse", "serde", "std"]
version = "0.9.0"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.19"

[dependencies.url]
features = ["serde"]
version = "2.5.4"

[profile.release]
lto = true
opt-level = "z"
strip = true
